--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.6.0",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongodb-memory-server": "^8.11.5",
     "mongoose": "^6.9.2",
